--- a/spark-docker/Dockerfile
+++ b/spark-docker/Dockerfile
@@ -14,14 +14,18 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Baixa e instala o Spark
-RUN curl -sL https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz | tar -xz -C /opt \
+RUN curl -sL https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz \
+    | tar -xz -C /opt \
     && mv /opt/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION} /opt/spark
 
-# Instala Jupyter e PySpark
-RUN pip3 install --no-cache-dir jupyter pyspark findspark
+# Instala Jupyter e PySpark compatível com Spark 3.5.0
+RUN pip3 install --no-cache-dir jupyter pyspark==3.5.0 findspark
 
 # Cria diretório de trabalho
 WORKDIR /opt/spark/apps
 
-# Porta padrão do Jupyter
+# Expõe porta do Jupyter Notebook
 EXPOSE 8888
+
+# Comando padrão ao iniciar o container
+CMD ["jupyter", "notebook", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root", "--NotebookApp.token=''"]
